# KrrRobocupProject

krr_agent/: CMakeLists.txt  README.md  package.xml
krr_agent/launch/: task1.launch.py  task1.launch.xml  task2.launch.py  task2.launch.xml  task3.launch.py  task3.launch.xml
krr_agent/pddl/: problem_t2.pddl  problem_t3.pddl
krr_agent/scripts/: setup_database.py  task1_manager.py
krr_gazebo/: CMakeLists.txt
krr_gazebo/launch/: krr_gazebo.launch.xml
scripts/task_db/data/: IDENTITY  LOG
scripts/task_db/schema/: IDENTITY  LOG
typedb_data/task_db/data/: IDENTITY  LOG
typedb_data/task_db/schema/: IDENTITY  LOG
