<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>krr_agent</name>
  <version>0.0.0</version>
  <description>Solution to the KRR final project</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <author email="g.rezendesilva@tudelft.nl">Gustavo Rezende</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
